Prevented footer overlap on narrow screens

--- a/sass/site/_footer.scss
+++ b/sass/site/_footer.scss
@@ -7,7 +7,7 @@ body > footer {
 
 	& > svg {
 		width: 100%;
-		margin-bottom: -2rem;
+		margin-bottom: -1.5rem;
 	}
 
 	& > small {
